# trimage

./: README  configure.ac
src/: .gitignore  Makefile.am  archive.c  breed.c  comptest.c  montecarlo.c  objective.c  pngtest.c  render.c  svgtest.c  triangle.c  trianglelist.c  trimage.h
