noinst_LIBRARIES = libtrimage.a

libtrimage_a_SOURCES = \
	trimage.h \
	archive.c \
	breed.c \
	objective.c \
	triangle.c \
	trianglelist.c \
	render.c

LDADD = libtrimage.a

noinst_PROGRAMS = pngtest svgtest comptest montecarlo

pngtest_SOURCES = \
	pngtest.c

svgtest_SOURCES = \
	svgtest.c

comptest_SOURCES = \
	comptest.c

montecarlo_SOURCES = \
	montecarlo.c
